アイコン追加、クリックして追加ガイド追加

--- a/templates/main.mustache
+++ b/templates/main.mustache
@@ -51,6 +51,9 @@
                 {{^notes}}
                 <div class="empty-placeholder">{{#str}}clicktoadd, mod_multiboard{{/str}}</div>
                 {{/notes}}
+                <div class="add-card-btn">
+                    <i class="fa fa-plus"></i> {{#str}}clicktoadd, mod_multiboard{{/str}}
+                </div>
             </div>
         </div>
         {{/columns}}
